# kealib

./: CMakeLists.txt  Changes.txt  CreateDistribution.txt  Dockerfile  Dockerfile.buildgdal  Doxyfile  INSTALL.txt  LICENSE.txt  README.md  build_for_ubuntu.sh  gen_python_docs.sh
.github/workflows/: docs.yml  test-build.yml
ArcGIS/: arccommon.isi  arcgis.iss  arcpro.iss  buildkea.bat  buildkeaforarc.bat  buildkeastatic.bat  buildzlibhdf5.bat  readme.txt
ERDAS_Imagine/: buildall.bat  buildstatic.bat  install2011.iss  install2015.iss  kea.h  keafile.cpp  keainstance.cpp  kealayer.cpp  keaproj.cpp  keaproj.h  keatable.cpp  makefile2011.vc  makefile2015_x64.vc  makefile2015_x86.vc  readme_dist2015.txt  version.rc
cmake/: TransformVersion.cmake
contrib/arch/: PKGBUILD
contrib/ubuntu/: README.md
contrib/ubuntu/focal_ubuntugis_stable/: Dockerfile
contrib/ubuntu/focal_ubuntugis_stable/DEBIAN/: control
contrib/ubuntu/focal_ubuntugis_unstable/: Dockerfile
contrib/ubuntu/focal_ubuntugis_unstable/DEBIAN/: control
contrib/ubuntu/jammy/DEBIAN/: control
contrib/ubuntu/jammy_none/: Dockerfile
contrib/ubuntu/jammy_none/DEBIAN/: control
contrib/ubuntu/jammy_ubuntugis_unstable/: Dockerfile
contrib/ubuntu/jammy_ubuntugis_unstable/DEBIAN/: control
docs/: index.md
docs/cpp/html/: KEAAttributeTableFile_8h.html  KEAAttributeTableFile_8h_source.html  KEAAttributeTableInMem_8h.html  KEAAttributeTableInMem_8h_source.html  KEAAttributeTable_8h.html  KEAAttributeTable_8h_source.html  KEACommon_8h.html  KEACommon_8h_source.html  KEAException_8h.html  KEAException_8h_source.html  KEAImageIO_8h.html  KEAImageIO_8h_source.html  annotated.html  classes.html  classkealib_1_1KEAATTException-members.html  classkealib_1_1KEAATTException.html  classkealib_1_1KEAAttributeTable-members.html  classkealib_1_1KEAAttributeTable.html  classkealib_1_1KEAAttributeTableFile-members.html  classkealib_1_1KEAAttributeTableFile.html  classkealib_1_1KEAAttributeTableInMem-members.html  classkealib_1_1KEAAttributeTableInMem.html  classkealib_1_1KEAException-members.html  classkealib_1_1KEAException.html  classkealib_1_1KEAIOException-members.html  classkealib_1_1KEAIOException.html  classkealib_1_1KEAImageIO-members.html  classkealib_1_1KEAImageIO.html  dir_d1879010e1ad61ac898cb3bfef8203fe.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_c.html  (+59 more)
docs/cpp/html/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+12 more)
docs/python/: index.html  kealib.html
docs/python/kealib/: build_neighbours.html  extrat.html
gdal/: CMakeLists.txt  keaband.cpp  keaband.h  keacopy.cpp  keacopy.h  keadataset.cpp  keadataset.h  keadriver.cpp  keamaskband.cpp  keamaskband.h  keaoverview.cpp  keaoverview.h  kearat.cpp  kearat.h  resource.rc.in
include/: kea-config.h.in
include/libkea/: KEAAttributeTable.h  KEAAttributeTableFile.h  KEAAttributeTableInMem.h  KEACommon.h  KEAException.h  KEAImageIO.h
python/: CMakeLists.txt  LICENSE.txt  __init__.py  build_neighbours.py  extrat.cpp  fakegdal.cpp  kea_build_neighbours  kea_build_neighbours.py  pykealib.cpp  run_test.py  setup.py  testpython.py  testseg.cpp
python/Dockerfiles/: dockerimg
python/Dockerscripts/: builddockerimage.sh  buildpackage.sh  dockerbuild.sh  dockerbuildconda.sh
python/condarecipe/: build.sh  meta.yaml
src/: CMakeLists.txt  Config.cmake.in
src/libkea/: KEAAttributeTable.cpp  KEAAttributeTableFile.cpp  KEAAttributeTableInMem.cpp  KEAImageIO.cpp
src/tests/: test1.cpp  testread.cpp  testsupport.cpp  testsupport.h  testwrite.cpp
tools/: kea-config.bat.in  kea-config.in
trunk/: CMakeLists.txt  Changes.txt  CreateDistribution.txt
trunk/ArcGIS/: arccommon.isi  arcgis.iss  buildkeaforarc.bat  buildkeastatic.bat  buildzlibhdf5.bat  readme.txt
trunk/ERDAS_Imagine/: buildall.bat  buildstatic.bat  install.iss  install2011.iss  install2015.iss  kea.h  keafile.cpp  keainstance.cpp  kealayer.cpp  keaproj.cpp  keaproj.h  keatable.cpp  makefile  makefile.vc  makefile2011.vc  makefile2015_x64.vc  makefile2015_x86.vc  readme.txt  readme_dist.txt  readme_dist2011.txt  readme_dist2015.txt  version.rc
trunk/doc/: index.txt
trunk/gdal/: CMakeLists.txt  KEABand.cpp  KEABand.h  KEACopy.cpp  KEACopy.h  KEADataset.cpp  KEADataset.h  KEADriver.cpp  KEAMaskBand.cpp  KEAMaskBand.h  KEAOverview.cpp  KEAOverview.h  keaband.cpp  keaband.h  keacopy.cpp  keadataset.cpp  keadataset.h  keadriver.cpp  keamaskband.cpp  keaoverview.cpp  keaoverview.h  kearat.cpp  kearat.h
trunk/include/: kea-config.h.in
trunk/include/libkea/: KEAAttributeTable.h  KEAAttributeTableFile.h  KEAAttributeTableInMem.h  KEACommon.h  KEAException.h  KEAImageIO.h  KEAReader.h  KEAWriter.h
trunk/python/: run_test.py  setup.py
trunk/python/src/: neighbours.cpp
trunk/src/: CMakeLists.txt  kealibatttests.cpp  kealibatttests.h
trunk/src/exe/createkeaimg/: main.cpp
trunk/src/exe/gdal2kea/: main.cpp
trunk/src/exe/img2kea/: main.cpp
trunk/src/exe/kea2gdal/: main.cpp
trunk/src/libkea/: KEAAttributeTable.cpp  KEAAttributeTableFile.cpp  KEAAttributeTableInMem.cpp  KEAImageIO.cpp  KEAReader.cpp  KEAWriter.cpp
trunk/tools/: kea-config.in
web/: index.html
